Changed the structure due to class not autoloading

--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,11 @@
         }
     ],
     "autoload": {
+        "classmap": [
+            "src"
+        ],
         "psr-0": {
-            "zappem\\zappem-laravel": "src/"
+            "Zappem\\ZappemLaravel\\": "src/"
         }
     }
 }
