--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
     "keywords": ["zappem","bug", "tracking"],
     "homepage": "https://github.com/danjohnson95/zappem-laravel",
     "license": "MIT",
+    "version": "1.0.0",
     "authors": [
         {
             "name": "Dan Johnson",
